--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,8 @@
   <button class="add-contact">Add Contact</button>
   <div><p>You have no contacts in your address book</p></div>
   
-  <form action="#">
+ 
+  <form class="new-contact-form" action="#">
       <label for="name">Name</label>
       <input id="contact-name" name="name" type="text">
       <label for="email">Email</label>
@@ -28,6 +29,7 @@
       <input id="contact-twitter" name="twitter" type="text">
       <input class="save-contact" type="submit" value="Save contact">
     </form>
+  
   
   <script src="../dist/bundle.js"></script>
   
