--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </form>
   
   
-  <script src="../dist/bundle.js"></script>
+  <script src="./dist/bundle.js"></script>
   <div class="contact-list">
 
 
