--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 </head>
 
 <body>
-  <div class="w-full bg-white rounded shadow-lg p-8 m-4 md:max-w-sm md:mx-auto">
-    <h1 class="block w-full text center text-grey-darkest mb-6">Contacts</h1>    
-    <form class="new-contact-form mb-6" action="#">
+  <div class="main w-full bg-white rounded shadow-lg p-8 m-4 md:max-w-sm md:mx-auto font-serif text-lg text-grey-darkest text-center">
+    <h1 class="block w-full text center text-grey-darkest mb-6 align-middle">Contacts</h1>  </br>
+    <button class="add-contact block bg-blue hover:bg-blue-dark text-white font-bold py-2 px-4 rounded-full">Add Contact</button>
+    <!-- <form class="new-contact-form mb-6" action="#">
       <div class="flex flex-col mb-4" 
             <label class="mb-2 uppercase font-bold text-lg text-grey-darkest" for="name">Name</label>
             <input class="border py-2 px-3 text-grey-darkest" id="contact-name" name="name" type="text">
@@ -37,14 +38,16 @@
           <label class="mb-2 uppercase font-bold text-lg text-grey-darkest" for="twitter">Twitter</label>
           <input class="border py-2 px-3 text-grey-darkest" id="contact-twitter" name="twitter" type="text">
       </div> 
-        <button class="save-contact bg-blue hover:bg-blue-dark text-white font-bold py-2 px-4 rounded-full" type="submit">Add Contact</button>
-      </form>
+        <div>    
+        <button class="save-contact bg-blue hover:bg-blue-dark text-white font-bold py-2 px-4 rounded-full" type="submit">Save Contact</button>
+          </div>
+      </form> -->
     
     
     <script src="./dist/bundle.js"></script>
     <br/>
   </div>
-  <div class="contact-list w-full bg-white rounded shadow-lg p-8 m-4 md:max-w-sm md:mx-auto"></div>
+  <div class="contact-list w-full bg-white rounded shadow-lg p-8 m-4 md:max-w-sm md:mx-auto font-serif text-lg text-grey-darkest text-center"></div>
 
 </body>
 
