--- a/index.html
+++ b/index.html
@@ -5,33 +5,42 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
   <title>Address book</title>
 </head>
 
-<body>
-  <h1>Contacts</h1>
-  <button class="add-contact">Add Contact</button>
+<body class="bg-grey-light">
+    <div class="container mx-auto font-sans text-lg leading-normal my-8 px-8 text-left">
+      <div class="w-full max-w-md">
+      <h1 class="font-sans text-4xl uppercase text-center">Contacts</h1>
+    <div class="mb-2 pt-2 text-center">
+      <button class="bg-blue hover:bg-blue-dark text-white font-bold py-2 px-4 rounded text-center" class="add-contact">Add Contact</button>
+    </div>
+    <div class="bg-teal mx-auto max-w-md shadow-lg rounded-lg overflow-hidden px-8">
+      <form class="new-contact-form" class="bg-white shadow-md rounded px-8 pt-8 pb-8 mb-2" class="new-contact-form" action="#">
+        <div class="mb-2 pt-2"> 
+          <label class="block text-grey-darker text-lg font-bold mb-2 pt-2 leading-tight" for="name">Name</label>
+          <input class="shadow appearance-none border rounded w-full py-2 px-3 text-grey-darker leading-tight" placeholder="Jane or John Doe" id="contact-name" name="name" type="text">
+          <label class="block text-grey-darker text-lg font-bold mb-2 pt-2 leading-tight" for="email">Email</label>
+          <input class="shadow appearance-none border rounded w-full py-2 px-3 text-grey-darker leading-tight focus:outline-none focus:shadow-outline" placeholder="jane@doe.com" id="contact-email" name="email" type="email">
+          <label class="block text-grey-darker text-lg font-bold mb-2 pt-2 leading-tight" for="phone">Phone</label>
+          <input class="shadow appearance-none border-black rounded w-full py-2 px-3 text-grey-darker leading-tight focus:outline-none focus:shadow-outline" placeholder="+46 00 00 00 00" id="contact-phone" name="phone" type="text">
+          <label class="block text-grey-darker text-lg font-bold mb-2 pt-2 leading-tight" for="company">Company</label>
+          <input class="shadow appearance-none border-black rounded w-full py-2 px-3 text-grey-darker leading-tight focus:outline-none focus:shadow-outline" placeholder="ABC Corporation" id="contact-company" name="company" type="text">
+          <label class="block text-grey-darker text-lg font-bold mb-2 pt-2 leading-tight" for="notes">Notes</label>
+          <textarea class="shadow appearance-none border-black rounded w-full py-2 px-3 text-grey-darker leading-tight focus:outline-none focus:shadow-outline" placeholder="Add some notes" id="contact-notes" name="notes" type="text"></textarea>
+          <label for="twitter">Twitter</label>
+          <input class="shadow appearance-none border-black rounded w-full py-2 px-5 text-grey-darker leading-tight focus:outline-none focus:shadow-outline" placeholder="@username"id="contact-twitter" name="twitter" type="text">
+      </form>
+      <div class="mb-4 pt-4 text-center">
+        <input class="save-contact bg-blue hover:bg-blue-dark text-white font-bold py-2 px-4 rounded text-center" type="submit" value="Save contact">
+      </div>
+  </div>
+  </div>
   
- 
-  <form class="new-contact-form" action="#">
-      <label for="name">Name</label>
-      <input id="contact-name" name="name" type="text">
-      <label for="email">Email</label>
-      <input id="contact-email" name="email" type="email">
-      <label for="phone">Phone</label>
-      <input id="contact-phone" name="phone" type="text">
-      <label for="company">Company</label>
-      <input id="contact-company" name="company" type="text">
-      <label for="notes">Notes</label>
-      <textarea id="contact-notes" name="notes" type="text"></textarea>
-      <label for="twitter">Twitter</label>
-      <input id="contact-twitter" name="twitter" type="text">
-      <input class="save-contact" type="submit" value="Save contact">
-    </form>
   
-  
-  <script src="./dist/bundle.js"></script>
   <div class="contact-list">
+  <script src="./dist/bundle.js"></script>
 
 
 </body>
