fixed button CSS

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 <body>
   <div class="main w-full bg-white rounded shadow-lg p-8 m-4 md:max-w-sm md:mx-auto font-serif text-lg text-grey-darkest text-center">
     <h1 class="block w-full text center text-grey-darkest mb-6 align-middle">Contacts</h1>  </br>
-    <button class="add-contact block bg-blue hover:bg-blue-dark text-white font-bold py-2 px-4 rounded-full">Add Contact</button>
-    <!-- <form class="new-contact-form mb-6" action="#">
+    <button class="add-contact bg-blue hover:bg-blue-dark text-white font-bold py-2 px-4 rounded-full" type="submit">Add Contact</button>  </br>  <!-- <form class="new-contact-form mb-6" action="#">
       <div class="flex flex-col mb-4" 
             <label class="mb-2 uppercase font-bold text-lg text-grey-darkest" for="name">Name</label>
             <input class="border py-2 px-3 text-grey-darkest" id="contact-name" name="name" type="text">
