made form invisible by default

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="mb-2 pt-2 text-center"onclick="hideForm()">
       <button class="add-contact bg-blue hover:bg-blue-dark text-white font-bold py-2 px-4 rounded text-center">Add Contact</button>
     </div>
-    <div id="myForm"class="bg-teal mx-auto max-w-md shadow-lg rounded-lg overflow-hidden px-8">
+    <div isibility: hidden id="myForm" class="bg-teal mx-auto max-w-md shadow-lg rounded-lg overflow-hidden px-8">
       <form class="new-contact-form" class="bg-white shadow-md rounded px-8 pt-8 pb-8 mb-2" class="new-contact-form" action="#">
         <div class="mb-2 pt-2"> 
           <label class="block text-grey-darker text-lg font-bold mb-2 pt-2 leading-tight" for="name">Name</label>
